# portfolio

./: CMakeLists.txt  README.md  contactme.htm  index.htm  netlify.toml  test.py
.github/workflows/: main.yml  workflow.yml
src/assets/adobe-xd-design/: design.xd
src/contactme/: contactme.htm
src/css/: 404-style.css  404-style.css.map  404-style.scss  contact-me-style.css  contact-me-style.css.map  contact-me-style.scss  index-style.css  index-style.css.map  index-style.scss
src/error/: MessageLogger.cc  MessageLogger.h
src/error-pages/: 404.htm  502.htm
src/helpers/: details.cc  details.h
src/js/: index.js  logger.js
src/js/redirection/: redirectToGitHubProfile.js  redirectToMainPage.js  socialMediaLinks.js
src/modules/: test.cpp
src/pages/: githubprojects.htm  index.htm  settings.htm
src/tests/: testingCSSContentContainerProperties.htm  testingCSSHeaderProperties.htm  testingCSSPrimary.htm
src/tests/css/: testingCSSContentContainerProperties.css  testingCSSContentContainerProperties.css.map  (+1 more)
src/theme/: ContentContainerProperties.css  ContentContainerProperties.css.map  ContentContainerProperties.scss  FooterProperties.css  FooterProperties.css.map  FooterProperties.scss  HeaderProperties.css  HeaderProperties.css.map  HeaderProperties.scss  ImageProperties.css  ImageProperties.css.map  ImageProperties.scss  PageProperties.css  PageProperties.css.map  PageProperties.scss  TextProperties.css  TextProperties.css.map  TextProperties.scss  primary.css  primary.css.map  primary.scss  secondary.css  secondary.css.map  tertiary.css  tertiary.css.map
